# dotfiles

./: .envrc  .gitconfig  .gitignore  .p10k.zsh  .ripgreprc  .sops.yaml  .stow-local-ignore  .zshrc  AGENTS.md  LICENSE  README.md  TODO.md  ToDo.md  configuration.nix  flake.nix  justfile  secrets.yaml  shell.nix  statix.toml  todo.txt
.cargo/: config.toml
.opencode/: persona-yandere.md  persona.md
.ssh/: .ssh  authorized_keys  config  id_ed25519  id_ed25519.pub  known_hosts  known_hosts.old
apps/: default.nix
flake/: default.nix  home-manager.nix  nixos.nix
home/: alacritty.nix  git.nix  gpg.nix  home.nix  tmux.nix  zsh.nix
keys/: 0x0FE5A355DBC92568-2024-08-09.asc  0x3B89704887DFEF65-2024-08-23.asc  0xD92D668B77A29897-2026-06-08.asc  17BC2AC739E1E1CB09D1EF8F405799C00700B6A3.asc  F4EB1A58AEE31FB5B156F1DFD443CE15A2304FD0-2024-08-09.asc  age-delta.pub  age-epsilon.pub  builder-delta.pub  builder-gamma.pub  builder.pub  gpg-3C792C846E074CB1-2024-07-05.asc  gpg-D99EF45898EF5FC9-2024-07-09.asc  mtls-ca.crt  ssh-delta.pub  ssh-epsilon.pub  ssh-gamma.pub  ssh-hetzner-deploy.pub  ssh-lambda.pub  ssh-mtls-delta.pub  ssh-mu.pub  ssh-work.pub  ssh-yubikey.pub
lib/: default.nix  keys.nix  math.nix  units.nix
modules/: checks.nix  dev-shell.nix  flake-parts.nix  formatter.nix  home-configurations.nix  lib.nix  meta.nix  nixos-tests.nix  nixvim.nix  nvidia.nix  overlays.nix  packages.nix  pre-commit.nix  preferences.nix  shell.nix  systems.nix  templates.nix  theme.nix  tofu.nix  topology.nix  unfree.nix
modules/templates/_haskell/: .gitignore  LICENSE  README.md  flake.nix  init.sh  sample-project.cabal
overlays/: default.nix  oh-my-posh.nix
pkgs/: copy-file.nix  default.nix  myip.nix  (+6 more)
templates/python/: pyproject.toml
templates/python/src/: __main__.py
(+725 files in other folders)
