[tool.poetry]
name = "sample-project"
version = "0.1.0"
description = ""
authors = ["Bastian Asmussen <bastian@asmussen.tech>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
