cabal-version:      2.4
name:               sample-project
version:            0.1.0.0
synopsis:           A short description of my package
license:            MIT
license-file:       LICENSE
author:             Bastian Asmussen
maintainer:         bastian@asmussen.tech
build-type:         Simple

executable sample-project
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base
    default-language: Haskell2010
    ghc-options:      -Wall
